# autocomputer-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  upload.sh
autocomputer_sdk/: __init__.py  client.py  local_namespaces.py  vm_manager.py  websocket_client.py
autocomputer_sdk/render/: messages.py
autocomputer_sdk/types/: __init__.py  computer.py  vm.py  workflow.py
autocomputer_sdk/types/messages/: __init__.py  content_blocks.py  request.py  response.py  ws.py
autocomputer_sdk/validate/: workflow_inputs.py
examples/: 01_login.py  02_enter_appointment.py  README.md  basic_usage.py  local_vm_runner.py  remote_multi_step_research.py  remote_single_prompt.py
examples/filesystem/: e2e_download_directory.py
examples/workflows/: single_prompt.json  web_research_report.json
tests/: test_client.py
