[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autocomputer-sdk"
version = "0.5.0"
description = "Python SDK for AutoComputer Flow API"
readme = "README.md"
authors = [
    {name = "AutoComputer", email = "madhav@autocomputer.ai"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["autocomputer", "ai", "workflow", "api", "client", "sdk"]
dependencies = [
    "httpx>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=0.9.9"
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://autocomputer.ai"
"Bug Tracker" = "https://github.com/autocomputer-ai/sdk/issues"
"Documentation" = "https://docs.autocomputer.ai"
"Source Code" = "https://github.com/autocomputer-ai/sdk"

[tool.setuptools]
# auto-discovery is on

[tool.setuptools.package-data]
autocomputer_sdk = ["py.typed"]
